--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -16,6 +16,7 @@
       </thead>
       <tbody>
         <% enhanced_cart.each do |item| %>
+          <% puts "Enhanced Cart: #{enhanced_cart}" %>
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
         <% end %>
       </tbody>
