--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -49,6 +49,18 @@ main section.categories-show {
         border-bottom-left-radius: 20px;
         font-size: 0.8em;
       }
+      aside.out-of-stock {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        background-color: #d58586;
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+        color: #eee;
+        font-weight: bold;
+      }
 
       &:hover {
         border-color: #999;
