--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -2,7 +2,7 @@
   <header>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
-      <h4><%= product.name %></h4>
+    <h4><%= product.name %></h4>
     <% end %>
   </header>
   <p class="description">
@@ -20,4 +20,9 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+  <% if product.quantity < 1 %>
+    <aside class="out-of-stock">
+      SOLD OUT!
+    </aside>
+    <% end %>
 </article>
