--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -60,6 +60,7 @@ main section.categories-show {
         font-size: 0.8em;
         color: #eee;
         font-weight: bold;
+        opacity: 0.6;
       }
 
       &:hover {
