--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,29 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<h1>Admin Dashboard</h1>
+<div class="panel panel-default items">
+  <table class="table table-hover table-bordered">
+    <thead>
+      <tr>
+        <th>Type</th>
+        <th>Quantity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <%= link_to "Products", "/admin/products"%>
+        </td>
+        <td>
+          <%= @products.size %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          Categories:              
+        </td>
+        <td>
+          <%= @categories.size %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
