--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to the Jungle</h1>
 <p>"This is an e-commerce site where you can buy items created by Captain Slow, Hamster and the Orangutan."</p>
- <%= image_tag "aboutUs.jpeg", height: 300 %>
+ <%= image_tag "about_us.jpeg", height: 300 %>
