--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -26,10 +26,9 @@
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+     <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
             <span class="caret"></span>
           </a>
@@ -46,9 +45,18 @@
           <% end %>
         </li>
         <li>
-           <%= link_to 'About Us', about_index_path %>
-
+          <% if current_user %>
+          <%= link_to root_path do %>
+          Signed in as <%= current_user.first_name %>
+          <% end %>
         </li>
+          <li> <%= link_to "Logout", '/logout' %> </li>
+        <% else %>
+          <li> <%= link_to 'Login', '/login' %> </li> <li> <%= link_to 'Signup', '/signup' %> </li>
+        <% end %>
+        <li>
+           <%= link_to 'About Us', about_index_path %>
+        </li>         
       </ul>
     </div>
   </div>
