style and arrange signup form elements

--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,9 +1,7 @@
-.signup_form {
+.form-group {
   display: flex;
-  // justify-content: center;
-  // align-items: center;
   flex-direction: column;
-  width: 15%;
+  width: 30%;
 }
 
 /* Get rid of all default margins/paddings. Set typeface */
