fix styling sign up form

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -18,7 +18,7 @@
       </tr>
       <tr>
         <td>
-          Categories:              
+          <%= link_to "Categories", "/admin/categories"%>
         </td>
         <td>
           <%= @categories.size %>
