--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,7 @@
 
   <div class="order-summary jumbotron">
     <h4>Thank you for your order!</h4>
-    <p>A confirmation email has been sent to: <%= @order.email %></p>
+    <p>A confirmation email has been sent to: <%= current_user.email %></p>
   </div>
 
   <div class="panel panel-default items">
