--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+ 
 
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
     <%= yield %>
+    <div class="flash-messages">
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, msg, class: "alert alert-info" %>
+      <% end %>
+    </div>
   </main>
 
   <%= yield :end_of_body %>
