--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,7 +24,7 @@
           <dd><%= humanized_money_with_symbol @product.price %></dd>
           <dd>
             <%= button_to add_item_cart_path(product_id: @product.id), class: 'btn btn-primary' , method: :post do %>
-              <%= fa_icon "shopping-cart", text: 'Add' %>
+              <%= fa_icon "shopping-cart", text: 'Add to cart' %>
             <% end %>
           </dd>
         </dl>
